...
            Loading()
        }


        Text(
            text = error, color = MaterialTheme.colorScheme.error,
            modifier = Modifier.testTag("error_message")
        )

        Spacer(modifier = Modifier.height(10.dp))
    }
}

...
